<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" style="@style/MSDK.Policy.Window.Inner"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_horizontal" android:id="@id/msdk_policy_title_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/msdk_policy_layout_title" android:textAlignment="center" style="@style/MSDK.Policy.Title" />
    <TextView android:id="@id/msdk_policy_content_tv" android:scrollbars="vertical" android:layout_marginTop="@dimen/msdk_policy_positive_space_width_16dp" android:layout_below="@id/msdk_policy_title_tv" android:layout_centerHorizontal="true" style="@style/MSDK.Policy.Content.Window" />
    <FrameLayout android:background="@drawable/msdk_policy_layout_button_group_bg" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <RelativeLayout android:id="@id/msdk_policy_btn_layout" android:layout_width="match_parent" android:layout_height="@dimen/msdk_policy_layout_button_group_height">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
                <Button android:id="@id/msdk_policy_confirm_btn" android:text="@string/msdk_policy_layout_confirm_button_text" style="@style/MSDK.Policy.Confirm.Button.Large" />
                <Button android:id="@id/msdk_policy_reject_btn" android:layout_marginTop="@dimen/msdk_policy_positive_space_width_12dp" android:text="@string/msdk_policy_layout_reject_button_text" android:layout_below="@id/msdk_policy_confirm_btn" style="@style/MSDK.Policy.Other.Button.Large" />
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>
