<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/unipay_head_test" android:background="#ff9933" android:paddingTop="10.0dp" android:paddingBottom="10.0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp">
            <TextView android:textSize="20.0sp" android:textColor="#ffffff" android:gravity="center" android:id="@id/unipay_head_test_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="测试标题" />
            <TextView android:textSize="18.0sp" android:textColor="#ffffff" android:gravity="center" android:id="@id/unipay_head_test_subTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="测试子标题" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/unipay_head_release" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp">
            <ImageView android:id="@id/unipay_head_release_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dp" android:src="@drawable/unipay_abroad_iconwarn" android:contentDescription="@string/unipay_abroad_iconsuc" />
            <TextView android:textSize="15.0sp" android:textColor="@color/unipay_abroad_em1" android:gravity="center" android:id="@id/unipay_head_release_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unipay_sure" />
        </LinearLayout>
        <TextView android:textSize="15.0sp" android:textColor="@color/unipay_abroad_em1" android:gravity="center_horizontal" android:id="@id/unipay_dialog_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dp" android:layout_marginRight="10.0dp" android:text="@string/unipay_sure" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="16.0sp" android:textColor="@color/unipay_abroad_thin1" android:id="@id/unipay_dialog_sure" android:background="@drawable/unipay_abroad_drawable_embtn" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/unipay_sure" android:layout_weight="1.0" />
            <Button android:textSize="16.0sp" android:textColor="@color/unipay_abroad_thin1" android:id="@id/unipay_dialog_clear" android:background="@drawable/unipay_abroad_drawable_embtn" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/unipay_clear" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
